; ModuleID = '/home/carl/AnghaBench/lab/engine/code/server/extr_sv_game.c_SV_GameCommand.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/server/extr_sv_game.c_SV_GameCommand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@sv = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@SS_GAME = common dso_local global i64 0, align 8
@qfalse = common dso_local global i32 0, align 4
@gvm = common dso_local global i32 0, align 4
@GAME_CONSOLE_COMMAND = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SV_GameCommand() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @sv, i32 0, i32 0), align 8
  %3 = load i64, i64* @SS_GAME, align 8
  %4 = icmp ne i64 %2, %3
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = load i32, i32* @qfalse, align 4
  store i32 %6, i32* %1, align 4
  br label %11

7:                                                ; preds = %0
  %8 = load i32, i32* @gvm, align 4
  %9 = load i32, i32* @GAME_CONSOLE_COMMAND, align 4
  %10 = call i32 @VM_Call(i32 %8, i32 %9)
  store i32 %10, i32* %1, align 4
  br label %11

11:                                               ; preds = %7, %5
  %12 = load i32, i32* %1, align 4
  ret i32 %12
}

declare dso_local i32 @VM_Call(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
